test/regress/cov8b-expr-error-ctx.test
; Coverage test for expr.cc
; Test expression evaluation error context dumping.
; When an expression fails to evaluate, the error context includes
; the expression text and location information.

2024/01/01 Test
    Expenses:Food    $10.00
    Assets:Cash

test reg --format '%(undefined_func(1))\n' -> 1
__ERROR__
While calculating format expression:
  undefined_func(1)
While evaluating value expression:
  undefined_func(1)
  ^^^^^^^^^^^^^^^^^
While handling posting from "$FILE", line 7:
>     Expenses:Food    $10.00
Error: Unknown identifier 'undefined_func'
end test
